[package]
name = "q"
version = "0.1.0"
edition = "2021"
authors = ["CRT-HAO"]
repository = "https://github.com/NTUST-Hack/q"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.196"
serde-aux = "4.4.0"
serde_derive = "1.0.196"
serde_json = "1.0.1"
tokio = { version = "1", features = ["full"] }
