[package]
name = "q"
version = "0.2.0"
edition = "2021"
authors = ["hayd1n", "Hayden Chang <m831718@gmail.com>"]
repository = "https://github.com/NTUST-Hack/q"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.196"
serde-aux = "4.4.0"
serde_derive = "1.0.196"
serde_json = "1.0.1"
serde_with = "3.8.1"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
tokio-task-pool = "0.1.5"
